edit-update-show

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,3 +5,7 @@
 <p>
     Description: <%= @article.description %>
 </p>
+<p>
+    <%= link_to "Edit article", edit_article_path(@article) %>
+    <%= link_to "Show articles", articles_path %>
+</p>
