--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit selecting article</h1>
 
 <% if @article.errors.any? %>
     <h2>Can not create article</h2>
@@ -22,6 +22,7 @@
         <%= f.submit %>
     </p>
 <%end%>
+
 <p>
     <%= link_to "Show articles", articles_path %>
 </p>
