--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,9 +15,9 @@
         <td><%= a.title %></td>
         <td><%= a.description %></td>
         <td>
-            <%= link_to "Edit", edit_article_path(a)%> |
-            <%= link_to "Show", article_path(a)%> |
-            <%= link_to "Delete", article_path(a)%>
+            <%= link_to "Edit", edit_article_path(a) %> |
+            <%= link_to "Show", article_path(a) %> |
+            <%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %>
         </td>
     </tr>
     <% end %>
