--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1> My homepage blog</h1>
+<div class= "center jumbotron">
+    <h1> My homepage blog</h1>
+    <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
 
-<%= link_to 'About', about_path %>
+
+
