--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: pink;
+$navbar-default-bg: black;
 // // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -34,4 +34,25 @@ $navbar-default-bg: pink;
 .btn-xlarge {
     font-size: 1.7em;
     background-color: rgb(78, 213, 218);
+}
+
+.footer {
+    margin-top: 35px;
+    padding-top: 5px;
+    border-top: 2px solid #eaeaea;
+    color: #777;
+}
+.footer a:hover {
+    color: #222;
+}
+.footer small {
+    float: left;
+}
+.footer ul {
+    float: right;
+    list-style: none;
+}
+.footer ul li {
+    float: left;
+    margin-left: 15px;
 }
