--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,3 +56,23 @@ $navbar-default-bg: black;
     float: left;
     margin-left: 15px;
 }
+
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    margin-top: 10px;
+}
+.description {
+    margin-top: 0px;
+}
+.article-title {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.article-description {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.button-actions {
+    margin-top: 7px;
+}
