--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,24 @@
-<h1>Listing all articles</h1>
-<p>
-    <%= link_to "Create new article", new_article_path %>
-</p>
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Actions</th>
-    </tr>
+<h1 align="center">Listing all articles</h1>
     <% @articles.each do |a| %>
-    <tr>
-        <td><%= a.id %></td>        
-        <td><%= a.title %></td>
-        <td><%= a.description %></td>
-        <td>
-            <%= link_to "Edit", edit_article_path(a) %> |
-            <%= link_to "Show", article_path(a) %> |
-            <%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %>
-        </td>
-    </tr>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2">
+                <div class="well well-lg">
+                    <div class="article-title">        
+                        <%= link_to a.title, article_path(a) %>
+                    </div>
+                    <div class="article-description">
+                        <%= a.description %>
+                    </div>
+                    <div class="article-actions">
+                        <div class="button-actions">
+                        <%= link_to "Edit article", article_path(a), class: "btn btn-xs btn-primary" %>
+                        <%= link_to "Delete this article", article_path(a), 
+                                                            class: "btn btn-xs btn-danger",
+                                                            method: :delete,
+                                                            data: {confirm: "Are you sure, you want to delete this article"} %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     <% end %>
-</table>
