--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,3 +76,7 @@ $navbar-default-bg: black;
 .button-actions {
     margin-top: 7px;
 }
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
