--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,14 @@
                         <%= link_to a.title, article_path(a) %>
                     </div>
                     <div class="article-description">
-                        <%= a.description %>
+                        <%= truncate(a.description, length: 130) %>
+                        <div class="article-meta-details">
+                            <small> 
+                                Created by : <%= a.user.username if a.user %>,
+                                <%= time_ago_in_words(a.created_at) %> ago,
+                                last updated: <%= time_ago_in_words(a.updated_at) %> ago
+                            </small>
+                        </div>
                     </div>
                     <div class="article-actions">
                         <div class="button-actions">
