--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,14 @@
 <h1 align="center">Showing profile information </h1>
 <div class="row">
     <div class="col-md-4 col-md-offset-4 center">
-    <%= gravatar_image(@user) %>
+    <%= gravatar_image(@user, size: 180 ) %>
     </div>
+</div>
+<h4 align="center"> <%= @user.username %>'s articles </h4>
+<div class="center">
+    <%= will_paginate @user_articles %>
+</div>
+<%= render 'articles/article', obj: @user_articles %>
+<div class="center">
+    <%= will_paginate @user_articles %>
 </div>
